# Cybersecurity-Threat-Detection

./: .gitignore  README.md  embeddings_transformer.py  pyproject.toml  run_fullstack.py
system/Posthoc-explaination_methosd/: E3_PostHoc_Explanations.ipynb  OpTC_Explainer.ipynb  OpTC_PostHoc_Explainers.ipynb  PostHoc_Explainer.ipynb
system/Training_data_attribution_methods/: E3_Cadets_attri.ipynb  E3_Theia_attri.ipynb  E3_Trace_attri.ipynb  E3_Train_attribution.ipynb  E5_Cadets_attribution.ipynb  Kellect_Flash.ipynb  Kellect_Flash_attri.ipynb  OpTC_Attri.ipynb  OpTC_Train_Attri.ipynb  dependencies.ipynb
system/explanation_outputs/: readme.md
tests/: conftest.py  test_alerts.py  test_api.py  test_api_dashboard.py  test_api_extensions.py  test_api_lifecycle.py  test_api_triage.py  test_attck.py  test_cases.py  test_cli.py  test_compliance.py  test_config.py  test_dashboard.py  test_drift_detection.py  test_ensemble.py  test_event.py  test_features.py  test_forensics.py  test_graph_correlation.py  test_graph_provenance.py  test_graph_scoring.py  test_hunt.py  test_incidents.py  test_ingestion_sources.py  test_intel.py  test_isolation_forest.py  test_model_registry.py  test_models_api.py  test_parsers.py  test_pipeline.py  test_pipeline_integration.py  test_reporting.py  test_response.py  test_rule_engine.py  test_simulator.py  test_statistical.py  test_timeutil.py  test_triage.py
threatpipe/: README.md  __init__.py
threatpipe/alerts/: __init__.py  base.py  email_sink.py  factory.py  file_sink.py  slack_sink.py  stdout_sink.py  webhook_sink.py
(+159 files in other folders)
